[gd_scene load_steps=16 format=2]

[ext_resource path="res://World/rock_4.png" type="Texture" id=1]
[ext_resource path="res://Menus/MainMenu.tres" type="DynamicFont" id=2]
[ext_resource path="res://World/CanvasLayer.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Menus/Fonte/ARIALI.TTF"

[sub_resource type="DynamicFont" id=2]
size = 10
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Menus/Fonte/ARIALI.TTF"

[sub_resource type="DynamicFont" id=4]
size = 10
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Menus/Fonte/ARIALI.TTF"

[sub_resource type="DynamicFont" id=6]
size = 10
use_filter = true
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Menus/Fonte/ARIALI.TTF"

[sub_resource type="DynamicFont" id=8]
size = 10
use_filter = true
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Menus/Fonte/ARIAL.TTF"

[sub_resource type="DynamicFont" id=10]
size = 14
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://Menus/Fonte/ARIAL.TTF"

[sub_resource type="DynamicFont" id=12]
size = 14
font_data = SubResource( 11 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Control4" type="Control" parent="."]
visible = false
margin_left = 8.49485
margin_top = 18.8774
margin_right = 48.4949
margin_bottom = 58.8774
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control4"]
modulate = Color( 1, 1, 1, 0.45098 )
margin_right = 304.0
margin_bottom = 137.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control4"]
margin_left = 5.1684
margin_top = 2.35968
margin_right = 300.168
margin_bottom = 47.3597
custom_fonts/font = SubResource( 2 )
text = "Parabéns!!

Você derrotou o Corominati
e salvou a escola!!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control5" type="Control" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control5"]
modulate = Color( 1, 1, 1, 0.45098 )
margin_right = 304.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control5"]
margin_left = 2.0
margin_top = 1.0
margin_right = 295.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "Ao caminhar pelo Campus, você encontra a cantina do seu
Josmar, onde ele está vendendo 3 itens:"
align = 1
valign = 1
max_lines_visible = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control5"]
margin_left = 105.572
margin_top = 51.6721
margin_right = 145.572
margin_bottom = 65.6721
custom_fonts/font = SubResource( 4 )
text = "Seu dinheiro : 15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCox" type="Button" parent="Control5"]
margin_left = 15.5051
margin_top = 77.1226
margin_right = 80.5051
margin_bottom = 97.1226
custom_fonts/font = SubResource( 6 )
text = "Coxinha : 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control5"]
visible = false
margin_left = 7.50515
margin_top = 101.123
margin_right = 87.5051
margin_bottom = 130.123
custom_fonts/font = SubResource( 4 )
text = "Recupera 1
de vida"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCoqui" type="Button" parent="Control5"]
margin_left = 95.5051
margin_top = 77.1226
margin_right = 210.505
margin_bottom = 97.1226
custom_fonts/font = SubResource( 6 )
text = "Coquinha Gelada : 10"

[node name="Label4" type="Label" parent="Control5"]
visible = false
margin_left = 111.505
margin_top = 101.123
margin_right = 191.505
margin_bottom = 130.123
custom_fonts/font = SubResource( 4 )
text = "Recupera 3
de vida"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAlmo" type="Button" parent="Control5"]
margin_left = 223.505
margin_top = 77.1226
margin_right = 290.505
margin_bottom = 97.1226
custom_fonts/font = SubResource( 6 )
text = "Almoço : 15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Control5"]
visible = false
margin_left = 183.505
margin_top = 101.123
margin_right = 295.505
margin_bottom = 130.123
custom_fonts/font = SubResource( 4 )
text = "Recupera toda a vida, e
 dá um bônus de dano"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Control5"]
visible = false
margin_left = 95.5052
margin_top = 101.123
margin_right = 207.505
margin_bottom = 130.123
custom_fonts/font = SubResource( 4 )
text = "Você não tem dinheiro
pra comprar isso!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Control5"]
margin_left = 121.782
margin_top = 134.773
margin_right = 178.782
margin_bottom = 153.773
custom_fonts/font = SubResource( 8 )
text = "Continuar"

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
modulate = Color( 0, 0, 0, 0.0862745 )
position = Vector2( 158.878, 85.9859 )
scale = Vector2( 0.0654974, 0.0523315 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="Control"]
margin_left = 104.0
margin_top = 88.0
margin_right = 213.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 10 )
text = "Voltar ao menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Control"]
margin_left = 106.119
margin_top = 64.0
margin_right = 210.119
margin_bottom = 84.0
custom_fonts/font = SubResource( 12 )
text = "Voltar ao jogo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item baú" type="Control" parent="."]
visible = false
margin_left = -24.5685
margin_top = -8.81946
margin_right = 15.4315
margin_bottom = 31.1805
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Item baú"]
margin_left = 89.1101
margin_top = 64.7401
margin_right = 280.11
margin_bottom = 132.74

[node name="Label" type="Label" parent="Item baú"]
margin_left = 85.1805
margin_top = 74.0
margin_right = 286.181
margin_bottom = 125.0
custom_fonts/font = ExtResource( 2 )
text = "Você ganhou o item:
"
align = 1
valign = 1
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Iten_timer" type="Timer" parent="Item baú"]

[node name="Control2" type="Control" parent="."]
visible = false
margin_left = 99.0
margin_top = 66.0
margin_right = 223.0
margin_bottom = 121.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control2"]
modulate = Color( 0, 0, 0, 0.0862745 )
position = Vector2( 62.0673, 26.814 )
scale = Vector2( 0.0757301, 0.052 )
texture = ExtResource( 1 )

[node name="ButtonNext" type="Button" parent="Control2"]
margin_left = -5.11636
margin_top = 10.8625
margin_right = 129.884
margin_bottom = 40.8625
custom_fonts/font = ExtResource( 2 )
text = "Próxima Fase"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="."]
visible = false
margin_left = 99.0
margin_top = 66.0
margin_right = 223.0
margin_bottom = 121.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control3"]
modulate = Color( 0, 0, 0, 0.0862745 )
position = Vector2( 59.1122, 19.4044 )
scale = Vector2( 0.15, 0.119787 )
texture = ExtResource( 1 )

[node name="ButtonNext" type="Button" parent="Control3"]
margin_left = -8.16837
margin_top = 52.5842
margin_right = 126.832
margin_bottom = 82.5842
custom_fonts/font = ExtResource( 2 )
text = "Próxima Fase"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Control5/ButtonCox" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Control5/ButtonCox" to="." method="_on_Button_mouse_exited"]
[connection signal="mouse_entered" from="Control5/ButtonCoqui" to="." method="_on_Button2_mouse_entered"]
[connection signal="mouse_exited" from="Control5/ButtonCoqui" to="." method="_on_Button2_mouse_exited"]
[connection signal="mouse_entered" from="Control5/ButtonAlmo" to="." method="_on_Button3_mouse_entered"]
[connection signal="mouse_exited" from="Control5/ButtonAlmo" to="." method="_on_Button3_mouse_exited"]
