extends CanvasLayer



func _on_Button_mouse_entered():
	$Control5/Label3.visible = true


func _on_Button_mouse_exited():
	$Control5/Label3.visible = false


func _on_Button2_mouse_entered():
	$Control5/Label4.visible = true


func _on_Button2_mouse_exited():
	$Control5/Label4.visible = false


func _on_Button3_mouse_entered():
	$Control5/Label5.visible = true


func _on_Button3_mouse_exited():
	$Control5/Label5.visible = false
